# lipp_experiment

./: .gitignore  CMakeLists.txt
src/benchmark/: main.cpp  utils.h
src/core/: lipp.h
src/examples/: CustomHeap.h  example.cpp  linear_regression_model.h  testFMCD.cpp  testFMCD.h  test_customheap.cpp  test_insert_blank.cpp  test_insert_blank.h  test_remove_key.cpp
src/partition_algorithm/: CMakeLists.txt  closure_algorithm.h  piecewise_linear_model.hpp  shrinkingcone_algorithm.h  test_partition_algorithm.cpp  utils.cpp  utils.h
src/ts/: builder.h  ts.h
